Completando todos los endpoints y arreglando el swagger
